src/assets/custom.css
@import "./faq.css";
@import "./pillar.css";
@import "./testimonial.css";

.curser-pointer {
  cursor: pointer;
}

.pre-line-text {
  white-space: pre-line;
}

.flex-row-dir {
  flex-direction: row;
}

.reverse-flex-row {
  flex-direction: row-reverse;
}

.image-withpoints {
  display: flex;
  justify-content: center;
}

.grid-class {
  display: grid;
}

.bread-crumb-cover {
  background-image: url(/images/parallax.jpg);
  background-position: center;
  background-size: cover;
}

.app-links {
  position: relative;
  right: 20px;
}

.app-links .loaded {
  margin: auto !important;
}

.map-canvas img {
  width: 100%;
  height: 100%;
}

.nav.mobile-navs {
  display: block !important;
}

.blogs-details-image > div > img {
  width: 100% !important;
  height: 100% !important;
  border-radius: 8px !important;
}

.blog-card {
  display: grid;
}

.unordered-list-rt > li p {
  margin: 0;
  margin-bottom: 0 !important;
}

.grey-bg {
  background-color: #f4f8fb;
}

.footer-content {
  color: #6f8ba4;
  white-space: pre-line;
}

.section-title.footer {
  margin-top: 26px;
}

p {
  letter-spacing: 1px;
}

@media (max-width: 991px) {
  .scroll-ref {
    display: none;
  }

  .blogs-container {
    max-width: 90vw;
  }
}

.typeform-widget iframe {
  height: 515px !important;
}

